--- a/composer.json
+++ b/composer.json
@@ -1,5 +1,6 @@
 {
     "require": {
-        "monolog/monolog": "1.13.1"
+        "monolog/monolog": "1.13.1",
+        "doctrine/dbal": "~2.5"
     }
 }
